--- a/src/app/pages/cadastros/produto/produto.component.html
+++ b/src/app/pages/cadastros/produto/produto.component.html
@@ -1,1 +1,40 @@
-<p>produto works!</p>
+<div class="botoes">
+    <button mat-raised-button color="primary" (click)="cadastrarProduto()">Novo Produto</button>
+  </div>
+  <div class="mat-elevation-z6">
+      <table mat-table [dataSource]="dataSource">
+    
+        <ng-container matColumnDef="descricao">
+          <th mat-header-cell style="width: 500px;" *matHeaderCellDef> Descrição </th>
+          <td mat-cell style="width: 500px;" *matCellDef="let element"> {{element.descricao}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="valor">
+          <th mat-header-cell *matHeaderCellDef> Valor </th>
+          <td mat-cell *matCellDef="let element"> {{element.valor |  currency:'R$ ':'code'}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="estoque">
+          <th mat-header-cell *matHeaderCellDef> Estoque </th>
+          <td mat-cell *matCellDef="let element"> {{element.estoque}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="acoes" >
+          <th mat-header-cell *matHeaderCellDef style="width: 200px; text-align: center;"> Ações </th>
+          <td mat-cell *matCellDef="let element" style="width: 200px; text-align: center;"> 
+            <button mat-button color="primary" (click)="editarProduto(element.id)">Editar</button>
+            <button mat-button color="accent" (click)="confirmaExclusaoProduto(element.id)">Excluir</button>
+          </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    
+      <mat-paginator #paginator 
+          [pageSizeOptions]="[10, 25, 50, 100]"
+          [length]="lengthList"
+          showFirstLastButtons
+          aria-label="Selecione a pagina">
+      </mat-paginator>
+    </div>
